--- a/settings.json
+++ b/settings.json
@@ -14,6 +14,7 @@
     "phpcs.trace.server": "verbose",
     "phpcs.showSources": true,
     "phpcs.autoConfigSearch": false,
+    "editor.rulers": [80],
     "php.suggest.basic": false,
     "[php]": {
         "editor.rulers": [80]
@@ -30,6 +31,7 @@
     "terminal.integrated.fontSize": 13,
     "terminal.integrated.lineHeight": 1.5,
     "files.trimTrailingWhitespace": true,
+    "files.defaultLanguage": "${activeEditorLanguage}",
     "extensions.ignoreRecommendations": false,
     "gitlens.advanced.messages": {
         "suppressCommitHasNoPreviousCommitWarning": false,
@@ -38,10 +40,6 @@
         "suppressGitVersionWarning": false,
         "suppressLineUncommittedWarning": false,
         "suppressNoRepositoryWarning": false,
-        "suppressResultsExplorerNotice": false,
-        "suppressShowKeyBindingsNotice": true,
-        "suppressUpdateNotice": false,
-        "suppressWelcomeNotice": true
     },
     "gitlens.keymap": "alternate",
     "editor.tokenColorCustomizations": {
@@ -70,7 +68,7 @@
     "editor.wordWrap": "off",
     "zenMode.fullScreen": false,
     "editor.wordSeparators": "`~!@#%^&*()=+[{]}\\|;:'\",.<>/?-",
-    "material-icon-theme.folders.theme": "specific",
+    "material-icon-theme.folders.theme": "classic",
     "material-icon-theme.hidesExplorerArrows": true,
     "material-icon-theme.folders.color": "#42a5f5",
     "workbench.activityBar.visible": true,
@@ -90,7 +88,6 @@
             }
         }]
     },
-    "gitlens.historyExplorer.enabled": false,
     "files.associations": {
         "*.module": "php",
         "*.inc": "php",
@@ -100,9 +97,8 @@
         "*.theme": "php",
     },
     "php-docblocker.returnGap": true,
-    "diffEditor.ignoreTrimWhitespace": false,
     "workbench.editor.tabSizing": "shrink",
-    "workbench.colorTheme": "Enki - Rainbow Bro",
+    "workbench.colorTheme": "Tokyo Night",
     "materialTheme.autoApplyIcons": false,
     "bookmarks.navigateThroughAllFiles": false,
     "explorer.autoReveal": false,
@@ -121,8 +117,6 @@
             "workbench.action.debug.start"
         ]
     },
-    "gitlens.views.fileHistory.enabled": false,
-    "gitlens.views.lineHistory.enabled": false,
     "intelephense.trace.server": "messages",
     "intelephense.debug.enable": false,
     "workbench.useExperimentalGridLayout": true,
@@ -150,7 +144,41 @@
     ],
     "extensions.autoUpdate": false,
     "search.exclude": {
-        "config": true,
-        "**/modules/contrib": false,
+        "**/modules/contrib": false
+    },
+    "liveshare.increasedGuestLimit": false,
+    "liveshare.populateGitCoAuthors": "never",
+    "liveshare.showInStatusBar": "whileCollaborating",
+    "workbench.iconTheme": "eq-material-theme-icons-palenight",
+    "material-icon-theme.activeIconPack": "angular",
+    "workbench.panel.defaultLocation": "right",
+    "[html]": {
+        "editor.defaultFormatter": "mblode.twig-language"
+    },
+    "[xml]": {
+        "editor.defaultFormatter": "mblode.pretty-formatter"
+    },
+    "explorer.confirmDragAndDrop": false,
+    "workbench.editorAssociations": [
+        {
+            "viewType": "default",
+            "filenamePattern": "git-rebase-todo"
+        }
+    ],
+    "dart.previewLsp": true,
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "search.useIgnoreFiles": false,
+    "workbench.sideBar.location": "left",
+    "vsicons.dontShowNewVersionMessage": true,
+    "diffEditor.codeLens": true,
+    "diffEditor.ignoreTrimWhitespace": false,
+    "editor.renderWhitespace": "none",
+    "workbench.editor.decorations.badges": false,
+    "workbench.editor.mouseBackForwardToNavigate": false,
+    "workbench.editor.decorations.colors": false,
+    "[json]": {
+        "editor.defaultFormatter": "mblode.pretty-formatter"
     },
 }
